feat(src): use scipy.integrate.solve_ivp instead of Runge–Kutta

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -17,6 +17,6 @@ ARG WORKSPACE
 RUN apt update && apt-get install -y ros-humble-rosbridge-suite
 RUN apt-get update && apt-get install ffmpeg libsm6 libgl1 libxext6  -y
 
-RUN pip install setuptools==58.2.0
+RUN pip install setuptools==58.2.0 scipy
 
 RUN echo "if [ -f ${WORKSPACE}/install/setup.bash ]; then source ${WORKSPACE}/install/setup.bash; fi" >> /home/ros/.bashrc
