--- a/src/double_pendulum_interfaces/CMakeLists.txt
+++ b/src/double_pendulum_interfaces/CMakeLists.txt
@@ -7,8 +7,7 @@ find_package(ament_cmake REQUIRED)
 
 rosidl_generate_interfaces(${PROJECT_NAME}
   "msg/DoublePendulum.msg"
-  "msg/CoordX.msg"
-  "msg/CoordY.msg"
+  "msg/PendulumCoord.msg"
  )
 
  ament_export_dependencies(rosidl_default_runtime)
